--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "stripe": "^12.16.0"
   }
 }
